Implement hosted finalization credits (#186)
